Show and purchase memberships

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -3,6 +3,8 @@ server:
     context-path: /api
 
 spring:
+  config:
+    import: optional:file:.env[properties]
   application:
     name: fitness-application
   jpa:
